--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,18 +5,38 @@
   width: var(--pc-100);
   overflow: hidden;
 
+  .login--logo {
+    position: absolute;
+    width: 114px;
+    height: 74px;
+    left: 11em;
+    top: 0px;
+  }
+
   .login--container {
     display: var(--flex);
     flex-direction: var(--column);
     // align-items: left;
   }
 
+  .login--form__container {
+    width: var(--pc-100);
+    display: var(--flex);
+    flex-direction: var(--column);
+
+    align-items: center;
+    margin-top: 20vh;
+  }
+
+  .option--p {
+    margin: 2em;
+  }
+
   .login-form {
     display: var(--flex);
     flex-direction: var(--column);
-    width: var(--pc-100);
+
     align-items: center;
-    margin-top: 20vh;
 
     & input {
       width: 412px;
@@ -28,7 +48,22 @@
       border-radius: var(--px-50);
     }
 
+    #login--h2 {
+      margin-left: -21vw;
+      color: var(--white-color);
+    }
+
+    .blue--login--btn {
+      margin-top: 1em;
+    }
+
     .login--third--party {
+      display: flex;
+      align-items: var(--align-center);
+      justify-content: space-between;
+      width: 90%;
+      margin: auto;
+
       & button {
         background: var(--white-color);
         border: var(--none);
@@ -39,9 +74,33 @@
         border-radius: 10px;
       }
 
-      & a{
+      .fb--icon,
+      .google--icon {
+        display: block;
+        background: var(--white-color);
+        box-shadow: 0px 12px 24px #000512;
+        border-radius: 4.8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 174px;
+        height: 48px;
+        margin-bottom: 2em;
+        user-select: none;
+        -webkit-user-drag: none;
+
+        .btn--name {
+          margin-left: 1em;
+          color: #1d2029;
+        }
+      }
+
+      & a {
         text-decoration: none;
       }
+    }
+    .forget-pswrd {
+      margin-top: 1em;
     }
   }
 
@@ -59,6 +118,22 @@
       line-height: 47px;
       width: 460px;
       margin-top: 20vh;
+    }
+
+    & div {
+      width: 100px;
+      height: 100px;
+
+      border: 1px solid #ffffff;
+      border-radius: 100px;
+    }
+
+    .circle--container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 50%;
+      margin-top: 3em;
     }
   }
 
